base design desktop

--- a/stylesheets/araka-style.scss
+++ b/stylesheets/araka-style.scss
@@ -52,4 +52,7 @@
 
 
 //Third Party
+@import "bootstrap/custom";
+@import "bootstrap/animate";
+@import "bootstrap/pace-loader";
 @import "bootstrap/responsive-queries";
