--- a/stylesheets/bootstrap/_scaffolding.scss
+++ b/stylesheets/bootstrap/_scaffolding.scss
@@ -48,7 +48,7 @@ textarea {
 a {
   color: $link-color;
   text-decoration: none;
-
+  @include transition(all .5s);
   &:hover,
   &:focus {
     color: $link-hover-color;
