--- a/stylesheets/bootstrap/_pace-loader.scss
+++ b/stylesheets/bootstrap/_pace-loader.scss
@@ -36,12 +36,13 @@
   right: -32px;
   bottom: 0;
   left: 0;
-
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  -o-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+  background-image:url('../images/image-loader.png');
+  @include bg-cover;
+  // -webkit-transform: translate3d(0, 0, 0);
+  // -moz-transform: translate3d(0, 0, 0);
+  // -ms-transform: translate3d(0, 0, 0);
+  // -o-transform: translate3d(0, 0, 0);
+  // transform: translate3d(0, 0, 0);
   
   // background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(0.25, rgba(255, 255, 255, 0.2)), color-stop(0.25, transparent), color-stop(0.5, transparent), color-stop(0.5, rgba(255, 255, 255, 0.2)), color-stop(0.75, rgba(255, 255, 255, 0.2)), color-stop(0.75, transparent), to(transparent));
   // background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
@@ -53,11 +54,11 @@
   // -o-background-size: 32px 32px;
   // background-size: 32px 32px;
 
-  -webkit-animation: pace-theme-barber-shop-motion 500ms linear infinite;
-  -moz-animation: pace-theme-barber-shop-motion 500ms linear infinite;
-  -ms-animation: pace-theme-barber-shop-motion 500ms linear infinite;
-  -o-animation: pace-theme-barber-shop-motion 500ms linear infinite;
-  animation: pace-theme-barber-shop-motion 500ms linear infinite;
+  // -webkit-animation: pace-theme-barber-shop-motion 500ms linear infinite;
+  // -moz-animation: pace-theme-barber-shop-motion 500ms linear infinite;
+  // -ms-animation: pace-theme-barber-shop-motion 500ms linear infinite;
+  // -o-animation: pace-theme-barber-shop-motion 500ms linear infinite;
+  // animation: pace-theme-barber-shop-motion 500ms linear infinite;
 }
 
 @-webkit-keyframes pace-theme-barber-shop-motion {
