update about n service

--- a/stylesheets/araka-style.scss
+++ b/stylesheets/araka-style.scss
@@ -53,6 +53,6 @@
 
 
 //Third Party
+// @import "bootstrap/responsive-queries";
 @import "bootstrap/custom";
 @import "bootstrap/animate";
-@import "bootstrap/responsive-queries";
