--- a/stylesheets/bootstrap/_variables.scss
+++ b/stylesheets/bootstrap/_variables.scss
@@ -810,8 +810,8 @@ $breadcrumb-separator:          "/" !default;
 
 $carousel-text-shadow:                        0 1px 2px rgba(0,0,0,.6) !default;
 
-$carousel-control-color:                      #fff !default;
-$carousel-control-width:                      15% !default;
+$carousel-control-color:                      $gray-base !default;
+$carousel-control-width:                      5% !default;
 $carousel-control-opacity:                    .5 !default;
 $carousel-control-font-size:                  20px !default;
 
